# python-template

./: AGENTS.md  CLAUDE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  settings.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/bruno/: Health.bru  Root.bru  bruno.json
{{cookiecutter.project_slug}}/bruno/items/: Create Item.bru  Get Item.bru  List Items.bru
{{cookiecutter.project_slug}}/notebooks/: getting_started.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: routes.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/core/: config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/streamlit/: __init__.py  app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  helpers.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py  test_cli.py  test_streamlit.py  test_utils.py
